--- a/skavigo-frontend-main/Mockups/Homepage.html
+++ b/skavigo-frontend-main/Mockups/Homepage.html
@@ -45,7 +45,7 @@
               <div class="@[480px]:p-4">
                 <div
                   class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-4"
-                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("https://cdn.usegalileo.ai/sdxl10/bffeeb36-8885-4912-a299-416fa6ac0415.png");'
+                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url(./images/Carousal1.1.jpg);'
                 >
                   <div class="flex flex-col gap-2 text-center">
                     <h1
@@ -74,7 +74,7 @@
               <div class="@[480px]:p-4">
                 <div
                   class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-4"
-                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("https://cdn.usegalileo.ai/stability/f374a695-48a6-4c2f-8b81-d44d37be6f24.png");'
+                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url(./images/Carousal1.2.jpg);'
                 >
                   <div class="flex flex-col gap-2 text-center">
                     <h1
@@ -105,7 +105,7 @@
               <div class="@[480px]:p-4">
                 <div
                   class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-4"
-                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("https://cdn.usegalileo.ai/stability/320808eb-8304-40c0-af73-00db682f9a27.png");'
+                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url(./images/carousal1.4.jpg);'
                 >
                   <div class="flex flex-col gap-2 text-center">
                     <h1
@@ -349,7 +349,7 @@
           <div class="relative flex flex-col gap-3 pb-3 group">
             <div
               class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url("https://cdn.usegalileo.ai/sdxl10/f8cfd43b-d88c-4739-a7e7-0951e213473b.png");'
+              style='background-image: url(./images/card1Truck.jpg);'
             >
               <div
                 class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
@@ -366,7 +366,7 @@
           <div class="relative flex flex-col gap-3 pb-3 group">
             <div
               class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url("https://cdn.usegalileo.ai/stability/d75c265b-ef32-4f87-970d-5387ac370d87.png");'
+              style='background-image: url(./images/card2Airplane.jpg);'
             >
               <div
                 class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
@@ -383,7 +383,7 @@
           <div class="relative flex flex-col gap-3 pb-3 group">
             <div
               class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url("https://cdn.usegalileo.ai/stability/90238c56-b258-45a2-8487-068759b5ad2b.png");'
+              style='background-image: url(./images/card3Ship.jpg);'
             >
               <div
                 class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
@@ -395,51 +395,34 @@
             </div>
             <p class="text-[#1C160C] text-[14px] font-medium leading-normal">Ocean Freight</p>
           </div>
-        </div>
-        <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3">
           <!-- Item 4 -->
           <div class="relative flex flex-col gap-3 pb-3 group">
             <div
               class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url("https://cdn.usegalileo.ai/sdxl10/f8cfd43b-d88c-4739-a7e7-0951e213473b.png");'
+              style='background-image: url(./images/Carousal3.3.jpg);'
             >
               <div
                 class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
               >
-                Trucking
+                <p class="ml-10 mr-10 text-justify text-[16px] font-normal leading-normal max-w-[720px]">
+                  Warehouses are located strategically to store, to manage, and to distribute your goods. Skavigo offers secure, scalable, and technology-driven warehousing solutions.
+                </p>
               </div>
             </div>
-            <p class="text-[#1C160C] text-base font-medium leading-normal">Trucking</p>
+            <p class="text-[#1C160C] text-[14px] font-medium leading-normal">Warehouse</p>
           </div>
-        
           <!-- Item 5 -->
           <div class="relative flex flex-col gap-3 pb-3 group">
             <div
               class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url("https://cdn.usegalileo.ai/stability/d75c265b-ef32-4f87-970d-5387ac370d87.png");'
             >
-              <div
-                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
-              >
-                Air Freight
+              <p>At Skavigo, we offer a comprehensive suite of logistics services designed to fit your business needs. Learn how our tailored solutions can drive efficiency and reliability for your business.</p>
+              <div class="flex items-center justify-center">
+                <button class="px-6 py-3 bg-blue-500 text-white font-medium text-lg rounded-lg shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
+                  Learn More
+                </button>
               </div>
             </div>
-            <p class="text-[#1C160C] text-base font-medium leading-normal">Air Freight</p>
-          </div>
-        
-          <!-- Item 6 -->
-          <div class="relative flex flex-col gap-3 pb-3 group">
-            <div
-              class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url("https://cdn.usegalileo.ai/stability/90238c56-b258-45a2-8487-068759b5ad2b.png");'
-            >
-              <div
-                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
-              >
-                Ocean Freight
-              </div>
-            </div>
-            <p class="text-[#1C160C] text-base font-medium leading-normal">Ocean Freight</p>
           </div>
         </div>
       </div>
@@ -448,12 +431,12 @@
       <div>  
         <h2 class="text-[#1C160C] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5"
         style="font-size: x-large;">Industries we serve</h2>
-        <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,250px))] gap-3 p-4">
+        <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,235px))] gap-3 p-4">
           <div class="flex flex-col gap-3 text-center pb-3">
             <div class="px-4">
               <div
                 class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-full"
-                style='background-image: url("https://cdn.usegalileo.ai/stability/50179ef5-5094-4da1-bc39-8fac3cd50a6e.png");'
+                style='background-image: url(./images/CircleEcommerce.jpg);'
               ></div>
             </div>
             <p class="text-[#1C160C] text-base font-medium leading-normal">E-commerce</p>
@@ -462,7 +445,7 @@
             <div class="px-4">
               <div
                 class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-full"
-                style='background-image: url("https://cdn.usegalileo.ai/stability/c46b2e01-e6be-44b4-9651-55d28bfd20e7.png");'
+                style='background-image: url(./images/CircleHealth.jpg);'
               ></div>
             </div>
             <p class="text-[#1C160C] text-base font-medium leading-normal">Health and Wellness</p>
@@ -471,7 +454,7 @@
             <div class="px-4">
               <div
                 class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-full"
-                style='background-image: url("https://cdn.usegalileo.ai/stability/9d16f62e-08c4-4ad1-9c0b-c0c1f3ba7330.png");'
+                style='background-image: url(./images/CircleFoodBreverages.jpg);'
               ></div>
             </div>
             <p class="text-[#1C160C] text-base font-medium leading-normal">Food and Beverage</p>
@@ -480,10 +463,28 @@
             <div class="px-4">
               <div
                 class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-full"
-                style='background-image: url("https://cdn.usegalileo.ai/stability/ab860d89-8967-41bb-92f0-5ce3a9afae58.png");'
+                style='background-image: url(./images/CircleTechnology.jpg);'
               ></div>
             </div>
             <p class="text-[#1C160C] text-base font-medium leading-normal">Technology</p>
+          </div>
+          <div class="flex flex-col gap-3 text-center pb-3">
+            <div class="px-4">
+              <div
+                class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-full"
+                style='background-image: url(./images/CircleFertilizer.jpg);'
+              ></div>
+            </div>
+            <p class="text-[#1C160C] text-base font-medium leading-normal">Fertilizers</p>
+          </div>
+          <div class="flex flex-col gap-3 text-center pb-3">
+            <div class="px-4">
+              <div
+                class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-full"
+                style='background-image: url(./images/CircleAgriculture.jpg);'
+              ></div>
+            </div>
+            <p class="text-[#1C160C] text-base font-medium leading-normal">Agriculture</p>
           </div>
         </div>
       </div>
