Get quote link removed, footer added, some pages removed

--- a/skavigo-frontend-main/Mockups/Homepage.html
+++ b/skavigo-frontend-main/Mockups/Homepage.html
@@ -62,7 +62,7 @@
                   <button
                     class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 @[480px]:h-12 @[480px]:px-5 bg-[#019863] text-[#FFFFFF] text-sm font-bold leading-normal tracking-[0.015em] @[480px]:text-base @[480px]:font-bold @[480px]:leading-normal @[480px]:tracking-[0.015em]"
                   >
-                    <span class="truncate" style="font-size: large;"><a href="C:\Users\Prasad\Downloads\skavigo-frontend-main\Mockups\form.html">Get a Quote</a> </span>
+                    <span class="truncate" style="font-size: large;"><a href="#">Get a Quote</a> </span>
                   </button>
                 </div>
               </div>
@@ -510,4 +510,42 @@
 
     </div>
   </body>
+  <footer class="bg-gray-900 text-white py-8">
+    <div class="max-w-7xl m-auto px-4">
+      <h1 class="text-2xl font-bold text-center mb-4"> SKAVIGO LOGISTICS PRIVATE LIMITED</h1>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 border-t border-gray-700">
+
+        <div>
+          <h2 class="text-2xl font-bold">Mail Id:</h2>
+          <p class="text-gray-400 mt-2">
+            info@skavigo.com
+            <br/>prasad.shete@skavigo.con
+            <br/>import@skavigo.com
+          </p>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-bold">Address</h2>
+          <p class="text-gray-400 mt-2">
+            Office No. F-01 A-39, 1st Floor, Upper Level, 
+            <br/>Haware Centurion, Plot NO 88 to 91, Sector-19A, 
+            <br/>Near Seawoods Railway Station, 
+            <br/>Nerul (East), Navi Mumbai 400706, 
+            <br/>Maharashtra, India
+          </p>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-bold">Phone Number</h2>
+          <p class="text-gray-400 mt-2">+91 84240 12124</p>
+        </div>
+        
+      </div>
+
+      <!-- Bottom Section -->
+      <div class="border-t border-gray-700 mt-6 pt-4 text-center text-gray-500 text-sm">
+        &copy; <span id="year">2025</span> SKAVIGO LOGISTICS PRIVATE LIMITED All rights reserved.
+      </div>
+    </div>
+  </footer>
 </html>
