Mail to, fav ico, unnecessary deleted

--- a/skavigo-frontend-main/Homepage.html
+++ b/skavigo-frontend-main/Homepage.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Skavigo</title>
-    <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
+    <link rel="icon" type="image/x-icon" href="./logo/skavigo_logo.ico" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -282,99 +282,77 @@
       <div class="flex flex-col gap-4 px-4 pb-10 @container">
         <div class="flex flex-col gap-6">
           <div class="flex flex-col gap-4">
-            <h2
-              class="text-[#1C160C] text-[22px] font-bold leading-tight tracking-[-0.015em]pb-3 pt-5"
-              style="font-size: x-large;"
-            >
+            <h2 class="text-[#1C160C] text-xl sm:text-2xl md:text-[22px] font-bold leading-tight tracking-[-0.015em] pb-3 pt-5">
               Our Services
             </h2>
-            <p class="text-[#1C160C] text-[16px] font-normal leading-normal max-w-[720px]">
+            <p class="text-[#1C160C] text-base sm:text-lg md:text-[16px] font-normal leading-normal max-w-[720px]">
               We offer a wide range of services from air freight, ocean freight, warehousing to trucking.
             </p>
           </div>
         </div>
-        <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
           <!-- Item 1 -->
           <div class="relative flex flex-col gap-3 pb-3 group">
-            <div
-              class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url(./images/card1Truck.jpg);'
-            >
+            <div class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
+              style='background-image: url(./images/card1Truck.jpg);'>
               <div
-                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
-              >
-                <p class="ml-10 mr-10 text-justify text-[16px] font-normal leading-normal max-w-[720px]">
+                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-sm sm:text-lg lg:text-xl font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl p-4">
+                <p class="text-justify max-w-[720px]">
                   Efficient trucking services for last-mile and long-haul transportation. Our fleet ensures timely, safe, and flexible delivery to keep your supply chain moving.
                 </p>
               </div>
             </div>
-            <p class="text-[#1C160C] text-[14px] font-medium leading-normal">Trucking</p>
+            <p class="text-[#1C160C] text-sm sm:text-lg lg:text-xl font-medium leading-normal">Trucking</p>
           </div>
-        
+
           <!-- Item 2 -->
           <div class="relative flex flex-col gap-3 pb-3 group">
-            <div
-              class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url(./images/card2Airplane.jpg);'
-            >
+            <div class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
+              style='background-image: url(./images/card2Airplane.jpg);'>
               <div
-                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
-              >
-              <p class="ml-10 mr-10 text-justify text-[16px] font-normal leading-normal max-w-[720px]">
-                Fast and efficient air freight solutions to meet your urgent delivery needs. From small parcels to large cargo, Skavigo ensures timely delivery with global coverage.
-              </p>
-              </div>
-            </div>
-            <p class="text-[#1C160C] text-[14px] font-medium leading-normal">Air Freight</p>
-          </div>
-        
-          <!-- Item 3 -->
-          <div class="relative flex flex-col gap-3 pb-3 group">
-            <div
-              class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url(./images/card3Ship.jpg);'
-            >
-              <div
-                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
-              >
-              <p class="ml-10 mr-10 text-justify text-[16px] font-normal leading-normal max-w-[720px]">
-                Cost-effective and reliable ocean freight services for international shipping. Whether it’s FCL, LCL, or specialized cargo, we handle it all with expertise.
-              </p>
-              </div>
-            </div>
-            <p class="text-[#1C160C] text-[14px] font-medium leading-normal">Ocean Freight</p>
-          </div>
-          <!-- Item 4 -->
-          <div class="relative flex flex-col gap-3 pb-3 group">
-            <div
-              class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-              style='background-image: url(./images/Carousal3.3.jpg);'
-            >
-              <div
-                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-lg font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl"
-              >
-                <p class="ml-10 mr-10 text-justify text-[16px] font-normal leading-normal max-w-[720px]">
-                  Warehouses are located strategically to store, to manage, and to distribute your goods. Skavigo offers secure, scalable, and technology-driven warehousing solutions.
+                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-sm sm:text-lg lg:text-xl font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl p-4">
+                <p class="text-justify max-w-[720px]">
+                  Fast and efficient air freight solutions to meet your urgent delivery needs. From small parcels to large cargo, Skavigo ensures timely delivery with global coverage.
                 </p>
               </div>
             </div>
-            <p class="text-[#1C160C] text-[14px] font-medium leading-normal">Warehouse</p>
+            <p class="text-[#1C160C] text-sm sm:text-lg lg:text-xl font-medium leading-normal">Air Freight</p>
           </div>
-          <!-- Item 5 -->
+
+          <!-- Item 3 -->
           <div class="relative flex flex-col gap-3 pb-3 group">
-            <div
-              class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
-            >
-              <p class="mb-10">At Skavigo, we offer a comprehensive suite of logistics services designed to fit your business needs. Learn how our tailored solutions can drive efficiency and reliability for your business.</p>
-              <div class="flex items-center justify-center">
-                <button class="px-6 py-3 bg-blue-500 text-white font-medium text-lg rounded-lg shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
-                  Learn More
-                </button>
+            <div class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
+              style='background-image: url(./images/card3Ship.jpg);'>
+              <div
+                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-sm sm:text-lg lg:text-xl font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl p-4">
+                <p class="text-justify max-w-[720px]">
+                  Cost-effective and reliable ocean freight services for international shipping. Whether it’s FCL, LCL, or specialized cargo, we handle it all with expertise.
+                </p>
               </div>
             </div>
+            <p class="text-[#1C160C] text-sm sm:text-lg lg:text-xl font-medium leading-normal">Ocean Freight</p>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="relative flex flex-col gap-3 pb-3 group">
+            <div class="relative w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
+              style='background-image: url(./images/Carousal3.3.jpg);'>
+              <div
+                class="absolute inset-0 flex items-center justify-center bg-black/60 text-white text-sm sm:text-lg lg:text-xl font-medium opacity-0 transition-opacity duration-300 group-hover:opacity-100 rounded-xl p-4">
+                <p class="text-justify max-w-[720px]">
+                  Warehouses are located strategically to store, manage, and distribute your goods. Skavigo offers secure, scalable, and technology-driven warehousing solutions.
+                </p>
+              </div>
+            </div>
+            <p class="text-[#1C160C] text-sm sm:text-lg lg:text-xl font-medium leading-normal">Warehouse</p>
           </div>
         </div>
+        <p class="text-[#1C160C] text-base sm:text-lg md:text-[16px] font-normal leading-normal">
+          At Skavigo, we offer a comprehensive suite of logistics services designed to fit your business needs. Learn how our tailored solutions can drive efficiency and reliability for your business. <a href="#">Learn more</a>
+        </p>
       </div>
+
+
 
       <!-- Section 3 -->
       <h2 class="text-[#1C160C] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5"
@@ -510,7 +488,7 @@
 
     </div>
   </body>
-  <footer class="bg-gray-900 text-white py-8">
+  <footer class="bg-gray-900 text-white py-8"> 
     <div class="max-w-7xl m-auto px-4">
       <h1 class="text-2xl font-bold text-center mb-4"> SKAVIGO LOGISTICS PRIVATE LIMITED</h1>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 border-t border-gray-700">
@@ -518,9 +496,9 @@
         <div>
           <h2 class="text-2xl font-bold">Mail Id:</h2>
           <p class="text-gray-400 mt-2">
-            info@skavigo.com
-            <br/>prasad.shete@skavigo.con
-            <br/>import@skavigo.com
+            <a href="mailto:info@skavigo.com">info@skavigo.com</a>
+            <br/><a href="mailto:prasad.shete@skavigo.com">prasad.shete@skavigo.com</a>
+            <br/><a href="mailto:import@skavigo.com">import@skavigo.com</a>
           </p>
         </div>
 
@@ -544,8 +522,12 @@
 
       <!-- Bottom Section -->
       <div class="border-t border-gray-700 mt-6 pt-4 text-center text-gray-500 text-sm">
-        &copy; <span id="year">2025</span> SKAVIGO LOGISTICS PRIVATE LIMITED All rights reserved.
+        &copy; <span id="year"></span> SKAVIGO LOGISTICS PRIVATE LIMITED All rights reserved.
       </div>
     </div>
   </footer>
+  <script>
+    // Dynamically update the year
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </html>
