Dark mode fixed

--- a/skavigo-frontend-main/Homepage.html
+++ b/skavigo-frontend-main/Homepage.html
@@ -141,12 +141,11 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-
       </div>
 
       <!-- Section 1b -->
-      <h2 class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px]">Who We Are</h2>
-      <div class="flex flex-col text-justify text-[32px] gap-10 px-4 pb-10 @container md:text-[22px] lg:text-[16px]">
+      <h2 class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px] bg-[#FFFFFF]">Who We Are</h2>
+      <div class="flex flex-col text-justify text-[32px] gap-10 px-4 pb-10 @container md:text-[22px] lg:text-[16px] bg-[#FFFFFF]">
         <p>
           Skavigo Logistics Pvt Ltd is a pioneering Indian logistics company specializing in comprehensive supply chain solutions. Backed by over a decade of experience through our sibling company, Rajita Clearing Agency Pvt Ltd, we deliver end-to-end logistics services, including customs clearance, freight forwarding, warehousing, and transportation.
           At Skavigo, we pride ourselves on our customer-centric approach, cutting-edge technology, and commitment to excellence. Whether you are scaling globally or optimizing local operations, our expertise ensures your goods move safely, efficiently, and on time.          
@@ -156,11 +155,11 @@
 
       <!-- Section 2 -->
       <h2 
-        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pt-5 md:text-[32px] lg:text-[22px]" 
+        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pt-5 md:text-[32px] lg:text-[22px] bg-[#FFFFFF]" 
       >
         Our Specialities
       </h2>
-      <div class="flex flex-col gap-10 px-4 py-10 @container">
+      <div class="flex flex-col gap-10 px-4 py-10 @container bg-[#FFFFFF]">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
           <div class="flex flex-1 gap-3 rounded-lg border border-[#E9DFCE] bg-[#FFFFFF] p-4 flex-col">
             <div class="text-[#1C160C]" data-icon="Timer" data-size="30px" data-weight="regular">
@@ -219,11 +218,11 @@
 
       <!-- Section J -->
       <h2 
-        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px]" 
+        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px] bg-[#FFFFFF]" 
       >
         Our Journey
       </h2>
-      <div class="grid grid-cols-[40px_1fr] gap-x-2 px-4 pb-10">
+      <div class="grid grid-cols-[40px_1fr] gap-x-2 px-4 pb-10 bg-[#FFFFFF]">
         <div class="flex flex-col items-center gap-1 pt-5">
           <div class="size-2 rounded-full bg-[#1C160C]"></div>
           <div class="w-[1.5px] bg-[#E9DFCE] h-4 grow"></div>
@@ -289,7 +288,7 @@
       </div>
 
       <!-- Section 6 -->
-      <div class="flex flex-col gap-4 px-4 pb-10 @container">
+      <div class="flex flex-col gap-4 px-4 pb-10 @container bg-[#FFFFFF]">
         <div class="flex flex-col gap-6">
           <div class="flex flex-col gap-4">
             <h2 class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] pb-3 pt-5 md:text-[32px] lg:text-[22px]">
@@ -364,31 +363,31 @@
 
       <!-- Section 3 -->
       <h2 
-        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px]"
+        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px] bg-[#FFFFFF]"
       >
         Our Mission
       </h2>
-      <p class="text-[#1C160C] text-justify text-[32px] md:text-[22px] lg:text-[16px] font-normal leading-normal pb-3 pt-1 px-4">
+      <p class="text-[#1C160C] text-justify text-[32px] md:text-[22px] lg:text-[16px] font-normal leading-normal pb-3 pt-1 px-4 bg-[#FFFFFF]">
         At Skavigo Logistics, our mission is to empower businesses with reliable, innovative, and efficient logistics solutions. We strive to simplify supply chain complexities, ensuring safe and timely delivery of goods while fostering long-term partnerships with our clients. Through excellence and sustainability, we aim to make logistics seamless for everyone.
       </p>
 
       <!-- Section 4 -->
       <h2 
-        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px]"
+        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px] bg-[#FFFFFF]"
       >
         Our Vision
       </h2>
-      <p class="text-[#1C160C] text-justify text-[32px] md:text-[22px] lg:text-[16px] font-normal leading-normal pb-3 pt-1 px-4">
+      <p class="text-[#1C160C] text-justify text-[32px] md:text-[22px] lg:text-[16px] font-normal leading-normal pb-3 pt-1 px-4 bg-[#FFFFFF]">
         Our vision is to become a global leader in logistics and supply chain solutions, redefining industry standards with innovation, integrity, and excellence. We aspire to build a future where logistics fuels growth, connects businesses, and enhances the lives of communities worldwide.
       </p>
 
       <!-- Section 5 -->
       <h2 
-        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px]"
+        class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px] bg-[#FFFFFF]"
       >
         Core Features
       </h2>
-      <div class="flex flex-col gap-10 px-4 py-10 @container">
+      <div class="flex flex-col gap-10 px-4 py-10 @container bg-[#FFFFFF]">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
           <div class="flex flex-1 gap-3 rounded-lg border border-[#E9DFCE] bg-[#FFFFFF] p-4 flex-col">
             <div class="text-[#1C160C]" data-icon="ArrowRight" data-size="30px" data-weight="regular">
@@ -443,7 +442,7 @@
       </div>
 
       <!-- Section 7 -->
-      <div>  
+      <div class="bg-[#FFFFFF]">  
         <h2 
           class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5 md:text-[32px] lg:text-[22px]"
         >
