--- a/skavigo-frontend-main/Homepage.html
+++ b/skavigo-frontend-main/Homepage.html
@@ -14,7 +14,6 @@
     <link rel="icon" type="image/x-icon" href="./logo/skavigo_logo.ico" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   </head>
   <body class="p-5">
@@ -360,6 +359,25 @@
           At Skavigo, we offer a comprehensive suite of logistics services designed to fit your business needs. Learn how our tailored solutions can drive efficiency and reliability for your business. <a href="#">Learn more</a>
         </p>
       </div>
+
+      <!-- Clients -->
+      <section class="py-12 px-6 bg-[#FFFFFF]">
+        <h2 class="text-[#1C160C] text-[42px] font-bold leading-tight tracking-[-0.015em] pb-3 pt-5 md:text-[32px] lg:text-[22px]">
+          Our Trusted Clients
+        </h2>
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6 items-center">
+            <img src="./partner_logos/EmpireIndustries.jpg" alt="Empire Industries" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/Glitorium_India.png" alt="Glitorium India" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/hardcastle.png" alt="Hard Castle" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/MahafeedFertlizers.png" alt="Mahafeed Fertlizers" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/maruchem.jpg" alt="maruchem" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/NutrisCropaSolutions.jpg" alt="Nutris Cropa Solutions" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/OMEGA_COLORS.webp" alt="OMEGA COLORS" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/RHI Magnesita.png" alt="RHI Magnesita" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/SwitchingAVO.png" alt="Switching AVO" class="mx-auto grayscale hover:grayscale-0 transition">
+            <img src="./partner_logos/tongyucommuni.png" alt="tongyu communi" class="mx-auto grayscale hover:grayscale-0 transition">
+        </div>
+      </section>
 
       <!-- Section 3 -->
       <h2 
